Revision history for perl distribution Convos

6.08 Not Released
 - Removed "protocol" from Convos::Core::Connection
 - Simpler Convos::Core::Settings by removing support for deprecated environment variables
 - Moved "remote_address" tracking from connection URL to user object

6.07 2021-03-24T12:44:00+0900
 - Add dependency information to Admin page
 - Fix compatibility with Mojolicious 9.11
 - Fix typo in Fallback.svelte

6.06 2021-03-05T08:30:00+0900
 - Add /shrug command
 - Fix not learning "h is tory" facts

6.05 2021-02-23T13:43:00+0900
 - Split advanced options into "Show advanced settings" and "Show authentication settings"

6.04 2021-02-23T11:43:00+0900
 - Add EXPERIMENTAL support for serving CMS pages as text and yaml
 - Fix only sending "WEBIRC ..." command if environment variable is set
 - Fix hiding the sidebar menu when URL changes

6.03 2021-02-23T21:15:00+0900
 - Had to revert Alpine to 3.12 to complete the build on hub.docker.com

6.02 2021-02-23T20:28:00+0900
 - Add default lang to stash #578
 - Add support for convos install [--bot,--ldap]
 - Fix "/reconnect" command #576
 - Fix placing password toggle at the right place

6.01 2021-02-23T08:48:00+0900
 - Add support for setting source IP for a connection
 - Changed the design on the login screen to only show one form
 - Fix clipping of text in the heading
 - Fix clicking on a the conversation name toggles the settings pane
 - Fix race condition where "join" event would override the "topic" message

6.00 2021-02-22T09:30:00+0900
 - Changed from Nordaaker to github.com/convos-chat and hub.docker.com/r/convos
 - Highlights since 5.00
   * Add "Facts" bot action
   * Add "compact display mode" as Viewport option
   * Add /ns (msg nickserv) and /cs (msg chanserv) aliases
   * Add better user experience for +i (invite only) channels
   * Add rendering of banlist, exceptlist, invitelist and quietlist
   * Add support for EXTERNAL and PLAIN SASL authentication
   * Add support for WEBIRC